--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Billboard Inspector</title>
     <link rel="manifest" href="/manifest.json" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+  <script type="importmap">
+
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.1.1/",
+    "react": "https://esm.sh/react@^19.1.1",
+    "@google/genai": "https://esm.sh/@google/genai@^1.13.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.539.0"
+  }
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
